# MiTMBeast

./: .gitignore  BUGS.md  CHANGELOG.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_PLAN.md  PHASE1_STATUS.md  PHASE3_PLAN.md  PYTHON_TUI_PLAN.md  README.md  RESTORE.md  attack-vectors.md  cert-hostname-substring-test.md  certmitm-setup.md  delorean.sh  dns-spoof.conf  dns-spoof.sh  fake-firmware-server.md  fake-firmware-server.py  intercept-mode.md  jetkvm-api-simulator.py  mitm.conf.example  mitm.sh  mitmbeast  mitmproxy-flow-logger.py  mitmproxy-intercept.py  ntp-cert-attack-test.md  pyproject.toml  sslstrip-mode.md
packet_captures/: br0_20251212_185408_b71a.pcap
src/mitmbeast/: __init__.py  cli.py
src/mitmbeast/core/: __init__.py  bridge.py  config.py  delorean.py  dnsmasq.py  event_sources.py  events.py  fakefw.py  firewall.py  hostapd.py  netif.py  restore.py  router.py  system.py  tcpdump.py
src/mitmbeast/core/proxy/: __init__.py  certmitm.py  fakefw.py  intercept.py  mitmproxy_mode.py  (+2 more)
src/mitmbeast/tui/: __init__.py  app.py  app.tcss  screens.py  state.py  widgets.py
tests/: test_bridge.py  test_bridge_integration.py  test_cli_dispatch.py  test_cli_smoke.py  test_config.py  test_delorean.py  test_dnsmasq.py  test_event_sources.py  test_events.py  test_fakefw.py  test_firewall.py  test_firewall_integration.py  test_hostapd.py  test_netif.py  test_netif_integration.py  test_proxy_certmitm.py  test_proxy_intercept.py  test_proxy_mitmproxy_mode.py  test_proxy_sslsplit.py  test_proxy_sslstrip.py  test_restore.py  test_system.py  test_tcpdump.py  test_tui_app.py
